[package]
name = "sculpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
clap = { version = "4.4.8", features = ["derive"] }
combine = "4.6.6"
inkwell = { version = "0.2.0", features = ["llvm10-0"] }
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
textwrap = "0.16.0"

[build-dependencies]
lalrpop = "0.20.0"

